Fixed bug with scrollBottom and position stretchBottom

--- a/scss/jpopup.scss
+++ b/scss/jpopup.scss
@@ -152,6 +152,7 @@
             padding: 2px 0;
             color: #444;
             box-shadow: none;
+            float: left;
 
             &:focus {
                 border-bottom: 2px solid #1565C0;
